# cmake-tinyproxy-crossplatform

./: .clang-format  .gitignore  CMakeLists.txt  README.md  tinyproxy.conf
cmake/: HelpProxyMisc.cmake
include/: CMakeLists.txt  acl.h  anonymous.h  base64.h  basicauth.h  buffer.h  child.h  common.h  conf.h  connect-ports.h  conns.h  custom_sysexits.h  daemon.h  debugtrace.h  filter.h  hashmap.h  heap.h  html-error.h  http-message.h  log.h  main.h  network.h  reqs.h  reverse-proxy.h  sock.h  stats.h  text.h  tinyproxy.h  tinyproxy_lib.h  transparent-proxy.h  upstream.h  utils.h  vector.h
include/config/: CMakeLists.txt  conf.h  conf_acl.h  conf_anon.h  conf_auth.h  conf_filt.h  conf_log.h
include/misc/: CMakeLists.txt  base64.h  file_api.h  hashmap.h  heap.h  list.h  text.h
include/self_contained/: debugtrace.h  object.h  safecall.h
include/subservice/: CMakeLists.txt  acl.h  acl_access_type.h  anonymous.h  basicauth.h  filter.h  filter_policy.h  log.h  log_levels.h  network.h
src/: CMakeLists.txt  acl.c  anonymous.c  base64.c  basicauth.c  buffer.c  child.c  conf.c  connect-ports.c  conns.c  daemon.c  filter.c  hashmap.c  heap.c  html-error.c  http-message.c  log.c  main.c  network.c  reqs.c  reverse-proxy.c  sock.c  stats.c  text.c  tinyproxy.c  transparent-proxy.c  upstream.c  utils.c  vector.c
src/cmake/: TinyproxyConfig.cmake
src/config/: CMakeLists.txt  conf.c  conf_acl.c  conf_anon.c  conf_auth.c  conf_filt.c  conf_log.c
src/misc/: CMakeLists.txt  base64.c  file_api.c  hashmap.c  heap.c  list.c  text.c
src/subservice/: CMakeLists.txt  acl.c  anonymous.c  basicauth.c  filter.c  log.c  network.c
